bugfix/scandiweb-002-fix-gallery-alignment - issue with the gallery moving to the bottom when text is too long, resolved

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
   position: relative;
   pointer-events: auto;
   padding-block: 1.5rem;
+  margin-bottom: 5rem;
 
   @include media-query('md') {
     padding: 0;
